# ge

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS_en.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_en.md  LICENSE  OAT.xml  README.md  README_en.md  SECURITY.md  SECURITY_en.md  Third_Party_Open_Source_Software_Notice  blacklist.txt  build.sh  build_third_party.sh  classify_rule.yaml  requirements.txt  version.cmake
api/acl/acl_model/: CMakeLists.txt
api/python/ge/: CMakeLists.txt  MANIFEST.in  setup.py
api/python/llm_datadist_v1/: CMakeLists.txt  MANIFEST.in  __init__.py  config.py  configs.py  data_type.py  kv_cache_manager.py  llm_datadist.py  llm_types.py  llm_utils.py  setup.py  status.py  tensor.py  wrapper.py
base/slice/: CMakeLists.txt  data_slice_adapter.cc  data_slice_adapter.h  data_slice_default_impl.cc  data_slice_default_impl.h  data_slice_elementwise_impl.cc  data_slice_elementwise_impl.h  data_slice_factory.cc  data_slice_factory.h  data_slice_helper.cc  data_slice_helper.h  data_slice_infer_base.h  data_slice_toolkit.h
cmake/device/: CMakeLists.txt
compiler/engines/: CMakeLists.txt
compiler/engines/cpu_engine/: CMakeLists.txt
compiler/engines/custom_engine/: custom_graph_optimizer.cc  custom_graph_optimizer.h  custom_ops_kernel_builder.cc  custom_ops_kernel_builder.h  custom_ops_kernel_info_store.cc  custom_ops_kernel_info_store.h
compiler/engines/dvpp_engine/: CMakeLists.txt
compiler/engines/ffts_engine/: CMakeLists.txt
compiler/engines/hccl_engine/: CMakeLists.txt  version.info
compiler/engines/local_engine/: CMakeLists.txt
compiler/engines/nn_engine/: CMakeLists.txt
compiler/engines/rts_engine/: CMakeLists.txt
dflow/flow_graph/: CMakeLists.txt  data_flow_attr_define.cc  data_flow_attr_define.h  flow_attr_util.cc  flow_attr_util.h  flow_graph.cc  flow_graph_utils.h  inner_pp.cc  model_pp.cc  process_point.cc
dflow/llm_datadist/v1/: CMakeLists.txt  llm_datadist.cc  llm_datadist.h  llm_datadist_internal.h  llm_error_codes.cc
dflow/proto/: CMakeLists.txt  dflow.proto
dflow/pydflow/: CMakeLists.txt
dflow/pydflow/python/: setup.py
dflow/pydflow/wrapper/: CMakeLists.txt  data_wrapper.cpp  dflow_wrapper.cpp  utils.h
examples/custom_es_api/: CMakeLists.txt  README.md  README_en.md  run_sample.sh
examples/custom_es_api/custom/: my_ConcatD.cpp  my_ConcatD.h  my_ConcatD_c.h  my_Conv2D.cpp  my_Conv2D.h  my_Conv2D_c.h  my_IdentityN.cpp  my_IdentityN.h  my_IdentityN_c.h
examples/custom_es_api/src/: main.cc
examples/custom_op/args_refresh_add_custom/: CMakeLists.txt  README.md  README_en.md  run.sh
examples/custom_op/compilable_add_custom/: CMakeLists.txt  README.md  README_en.md  run.sh
examples/custom_op/data_dependent_shape_custom/: CMakeLists.txt  README.md  README_en.md  run.sh
examples/dflow/cpp/: CMakeLists.txt  README.md  README_en.md  node_builder.h  sample_base.cpp  sample_countbatch.cpp  sample_exception.cpp  sample_multifunc.cpp  sample_perf.cpp  sample_tensorflow.cpp  sample_timebatch.cpp
examples/offline_compile_run/cpp/: CMakeLists.txt  README.md  README_en.md  main.cpp  run_sample.sh
examples/recommendation/: CMakeLists.txt  README.md  README_en.md
examples/recommendation/src/: model_inference.cpp  model_inference.h  recomand_random_input.cpp
inc/graph_metadef/: CMakeLists.txt
inc/graph_metadef/common/: blocking_queue.h  hyper_status.h  large_bm.h  screen_printer.h
inc/graph_metadef/graph/: aligned_ptr.h  anchor.h  args_format_desc.h  ascend_limits.h  attr_store.h  axis_type_info.h  buffer.h  common_error_codes.h  compute_graph.h  custom_op_factory.h  custom_op_factory_impl.h  custom_op_pull_registry.h  custom_op_registry.h  ge_attr_value.h  ge_context.h  ge_global_options.h  ge_local_context.h  ge_tensor.h  graph_util.h  ir_definitions_recover.h  model.h  model_serialize.h  node.h  op_desc.h  op_kernel_bin.h  op_so_bin.h  op_types.h  operator_factory_impl.h  opp_impl_version.h  opsproto_manager.h  ref_relation.h  resource_context_mgr.h  runtime_inference_context.h  shape_refiner.h  small_vector.h  tuning_utils.h  yuv_subformat.h
inc/graph_metadef/register/: amct_interface.h  amct_registry.h  core_num_utils.h  custom_pass_helper.h  ffts_plus_engine_update.h  ffts_plus_task_update.h  ffts_plus_update_manager.h  graph_register.h  host_cpu_context.h  infer_axis_slice_registry.h  infer_data_slice_registry.h  kernel_registry.h  op_check_register.h  op_ext_calc_param_registry.h  op_ext_gentask_registry.h  op_kernel_registry.h  op_lib_register_impl.h  ops_kernel_builder_registry.h  optimization_option_registry.h  pass_option_utils.h  prototype_pass_registry.h  stream_manage_func_registry.h
parser/: CMakeLists.txt
parser/parser/: CMakeLists.txt
parser/parser/caffe/: caffe_custom_parser_adapter.cc  caffe_custom_parser_adapter.h  caffe_data_parser.cc  caffe_data_parser.h  caffe_op_parser.cc  caffe_op_parser.h  caffe_parser.cc  caffe_parser.h  caffe_parser_internal.h  caffe_reshape_parser.cc  caffe_reshape_parser.h
parser/parser/common/: CMakeLists.txt  acl_graph_parser_util.cc  acl_graph_parser_util.h  auto_mapping_subgraph_io_index_func.cc  auto_mapping_subgraph_io_index_func.h  data_op_parser.cc  data_op_parser.h  graph_pass.h  model_saver.cc  model_saver.h  op_map.cc  op_map.h  op_parser_factory.cc  op_parser_factory.h  op_registration_tbe.cc  op_registration_tbe.h  parser_api.cc  parser_factory.cc  parser_fp16_t.cc  parser_fp16_t.h  parser_inner_ctx.cc  parser_types.cc  parser_utils.cc  parser_utils.h  pass.h  pass_manager.cc  pass_manager.h  pre_checker.cc  pre_checker.h  proto_file_parser.cc  proto_file_parser.h  prototype_pass_manager.cc  prototype_pass_manager.h  tbe_plugin_loader.cc  tbe_plugin_loader.h  tuple.h  (+4 more)
runtime/custom_op/: CMakeLists.txt  custom_op_loader.cc  custom_op_loader.h  python_custom_op_adapter.cc  python_custom_op_adapter.h  python_custom_op_bridge_c_api.h  python_custom_op_bridge_loader.cc  python_custom_op_bridge_loader.h  python_custom_op_bridge_types.h  python_custom_op_pybind_bridge.cc
tests/autofuse/: CMakeLists.txt
(+11414 files in other folders)
